# website-scrapper

./: .gitignore  README.md  main.py  prereqs.sh  pyproject.toml  requirements.txt  resources.md  scrapper.py
app/: connection.py  urls.py  utilities.py
scrapper/: email.py
